refactor(category): use ProductCategoryDTO payload and map imageUrl to icon field